src/main/arm/mainTemplate.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "installKitUri": {
            "type": "string"
        },
        "ibmUserId": {
            "type": "string"
        },
        "ibmUserPwd": {
            "type": "securestring"
        },
        "adminUser": {
            "type": "string"
        },
        "adminPwd": {
            "type": "securestring"
        },
        "vmAdminId": {
            "type": "string"
        },
        "vmAdminPwd": {
            "type": "securestring"
        },
        "virtualMachineName": {
            "defaultValue": "[concat(resourceGroup().name,'-wasnd-vm')]",
            "type": "string"
        },
        "vmSize": {
            "defaultValue": "Standard_D2s_v3",
            "type": "string"
        },
        "dnsLabelPrefix":{
            "defaultValue": "wasnd-ubuntuvm",
            "type": "string"
        },
        "virtualNetworkName": {
            "defaultValue": "[concat(resourceGroup().name,'-vnet')]",
            "type": "string"
        },
        "addressPrefix": {
            "defaultValue": "10.0.0.0/16",
            "type": "string"
        },
        "subnetName": {
            "defaultValue": "subnet01",
            "type": "string"
        },
        "subnetAddressPrefix": {
            "defaultValue": "10.0.1.0/24",
            "type": "string"
        },
        "virtualNetworkExisted": {
            "defaultValue": false,
            "type": "bool"
        },
        "networkSecurityGroupName": {
            "defaultValue": "[concat(resourceGroup().name,'-',parameters('subnetName'),'-nsg')]",
            "type": "string"
        },
        "location":{
            "type":"string",
            "defaultValue":"[resourceGroup().location]"
        },
        "db2ServerName": {
            "type": "string"
        },
        "db2ServerPortNumber": {
            "type": "string"
        },
        "db2DBName": {
            "type": "string"
        },
        "db2DBUserName": {
            "type": "string"
        },
        "db2DBUserPwd": {
            "type": "securestring"
        }
    },
    "variables": {
        "networkInterfaceName": "[concat(parameters('virtualMachineName'), '-if')]",
        "publicIPAddressName": "[concat(parameters('virtualMachineName'), '-ip')]",
        "diskName": "[concat(parameters('virtualMachineName'), '-disk')]",
        "publicIPAddressRef": "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddressName'))]",
        "subnetRef": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('subnetName'))]",
        "networkSecurityGroupRef": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroupName'))]",
        "networkInterfaceRef": "[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterfaceName'))]",
        "virtualNetworkRef": "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworkName'))]",
        "virtualMachineRef": "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachineName'))]",
        "fileUri": "${artifactsLocationBase}/${project.artifactId}/${git.tag}/src/main/scripts/install.sh",
        "commandToExecute1": "[concat('sh install.sh',' -l \"',parameters('installKitUri'),'\" -u ',parameters('ibmUserId'),' -p ',parameters('ibmUserPwd'),' -m ',parameters('adminUser'),' -c ',parameters('adminPwd'))]",
        "commandToExecute2": "[concat(' -n \"',parameters('db2ServerName'),'\" -t ',parameters('db2ServerPortNumber'),' -d ',parameters('db2DBName'),' -i ',parameters('db2DBUserName'),' -s ',parameters('db2DBUserPwd'))]"
    },
    "resources": [
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2019-06-01",
            "name": "[parameters('networkSecurityGroupName')]",
            "location": "[parameters('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "HTTP",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Inbound",
                            "destinationPortRanges": ["9060","9080"]
                        }
                    },
                    {
                        "name": "HTTPS",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 320,
                            "direction": "Inbound",
                            "destinationPortRanges": ["9043","9443"]
                        }
                    },
                    {
                        "name": "SSH",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 340,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2019-06-01",
            "name": "[variables('publicIPAddressName')]",
            "location": "[parameters('location')]",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "properties": {
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "dnsSettings":{
                    "domainNameLabel":"[parameters('dnsLabelPrefix')]"
                }
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2019-06-01",
            "name": "[parameters('virtualNetworkName')]",
            "condition": "[not(parameters('virtualNetworkExisted'))]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[variables('networkSecurityGroupRef')]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[parameters('addressPrefix')]"
                    ]
                },
                "enableDdosProtection": false,
                "enableVmProtection": false
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "apiVersion": "2019-03-01",
            "name": "[concat(parameters('virtualMachineName'), '/CustomScript')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[variables('virtualMachineRef')]"
            ],
            "properties": {
                "autoUpgradeMinorVersion": true,
                "publisher": "Microsoft.Azure.Extensions",
                "type": "CustomScript",
                "typeHandlerVersion": "2.0",
                "settings": {
                    "fileUris": [
                        "[variables('fileUri')]"
                    ],
                    "commandToExecute": "[concat(variables('commandToExecute1'), variables('commandToExecute2'))]"
                }
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2019-06-01",
            "name": "[concat(parameters('virtualNetworkName'), '/', parameters('subnetName'))]",
            "dependsOn": [
                "[variables('virtualNetworkRef')]",
                "[variables('networkSecurityGroupRef')]"
            ],
            "properties": {
                "addressPrefix": "[parameters('subnetAddressPrefix')]",
                "networkSecurityGroup": {
                    "id": "[variables('networkSecurityGroupRef')]"
                }
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2019-03-01",
            "name": "[parameters('virtualMachineName')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[variables('networkInterfaceRef')]"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('vmSize')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "UbuntuServer",
                        "sku": "18.04-LTS",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[variables('diskName')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "Premium_LRS"
                        },
                        "diskSizeGB": 30
                    }
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachineName')]",
                    "adminUsername": "[parameters('vmAdminId')]",
                    "adminPassword": "[parameters('vmAdminPwd')]",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false,
                        "provisionVMAgent": true
                    },
                    "allowExtensionOperations": true
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[variables('networkInterfaceRef')]"
                        }
                    ]
                }
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2019-06-01",
            "name": "[variables('networkInterfaceName')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[variables('publicIPAddressRef')]",
                "[variables('subnetRef')]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[variables('publicIPAddressRef')]"
                            },
                            "subnet": {
                                "id": "[variables('subnetRef')]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "primary": true
            }
        }
    ]
}
